# api/openapi/v1/urlshortener.openapi.yaml
@@ -1,14 +1,13 @@
 openapi: "3.0.0"
 info:
-  title: "Url Shortener API"
+  title: "URL Shortener API"
   version: "1.0.0"
-  description: "Shorten your url bruv"
   license:
     name: "MIT"
     url: "https://opensource.org/licenses/MIT"
 tags:
   - name: "urlshortener"
-    description: "URL Shortener lolz"
+    description: "URL Shortener"
   # servers:
   # - url: "https://api.example.com/v1"
   #   description: "Production server"
@@ -122,6 +121,10 @@ components:
           type: "string"
           format: "date-time"
           description: "Shortened URL creation date"
+        valid_until_utc:
+          type: "string"
+          format: "date-time"
+          description: "Shortened URL ttl"
     Error:
       type: "object"
       properties:
