# internal/core/domain/model/url.go
@@ -5,15 +5,21 @@ import (
 
 	"github.com/dzhordano/urlshortener/internal/pkg/errs"
 	"github.com/dzhordano/urlshortener/internal/pkg/random"
+	"github.com/google/uuid"
 )
 
-const ShortURLLength = 8
+const (
+	ShortURLLength   = 8
+	ShortURLValidFor = 14 * 24 * time.Hour // 2 weeks
+)
 
 type ShortenedURL struct {
-	OriginalURL  string
-	ShortURL     string
-	Clicks       int
-	CreatedAtUTC time.Time
+	ID            uuid.UUID
+	OriginalURL   string
+	ShortURL      string
+	Clicks        int
+	CreatedAtUTC  time.Time
+	ValidUntilUTC time.Time
 }
 
 func NewShortenedURL(originalURL string) (*ShortenedURL, error) {
@@ -21,10 +27,14 @@ func NewShortenedURL(originalURL string) (*ShortenedURL, error) {
 		return nil, errs.NewValueIsRequiredError("originalURL")
 	}
 
+	n := time.Now()
+
 	return &ShortenedURL{
-		OriginalURL:  originalURL,
-		ShortURL:     random.NewRandomString(ShortURLLength),
-		Clicks:       0,
-		CreatedAtUTC: time.Now().UTC(),
+		ID:            uuid.New(),
+		OriginalURL:   originalURL,
+		ShortURL:      random.NewRandomString(ShortURLLength),
+		Clicks:        0,
+		CreatedAtUTC:  n.UTC(),
+		ValidUntilUTC: n.Add(ShortURLValidFor).UTC(),
 	}, nil
 }
